[gd_scene load_steps=2 format=3 uid="uid://puo7lvtbljlf"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_noolu"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 2
visible = false
script = ExtResource("1_noolu")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.576471)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visibility_layer = 8
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -14.0
offset_right = 18.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
process_mode = 2
visibility_layer = 8
custom_minimum_size = Vector2(80, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Continue"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
process_mode = 2
custom_minimum_size = Vector2(80, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Return to menu"

[connection signal="focus_entered" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
